# xbuild

./: LICENSE  Makefile.am  configure.ac  flake.nix  xbuild.nix
libexec/: xrun
src/: xbuild  xbuild.c
