# configure.ac
AC_PREREQ([2.69])   # Minimum version of autoconf
AC_INIT([xbuild], [1.0], [rongsong.shen@gmail.com])  # Project info
AM_INIT_AUTOMAKE([foreign])  # Use Automake in 'foreign' mode (no strict requirements)

# Check for necessary tools (optional)
AC_PROG_INSTALL  # Ensure 'install' command is available

# Output the configuration for the Makefile
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

